tests/derive_mut/fails/receiver_box.stderr
error: cannot derive `Mut` for a trait declaring methods with arbitrary receiver types
 --> tests/derive_mut/fails/receiver_box.rs:7:18
  |
7 |     fn increment(self: Box<Self>);
  |                  ^^^^^^^^^^^^^^^
